--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,14 +12,14 @@
     "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "isolatedModules": true,
+    //"isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-
-    "baseUrl": ".",                 // ✅ ADD THIS
-    "paths": {                        // ✅ ADD THIS
-      "@/*": ["./src/*"]
+    "baseUrl": "./src",
+    "paths": {
+      "@/*": ["./*"]
     }
   },
-  "include": ["src"]
+  "include": ["src"],
+  "exclude": ["node_modules", "dist"]
 }
